--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ set -g default-terminal "xterm-256color"
 
 set -g default-command /bin/zsh
 # Bad Wolf
-#set -g status-fg colour245
-#set -g status-bg black
+set -g status-fg colour245
+set -g status-bg colour234
 #set -g window-status-activity-attr bold
 #set -g pane-border-fg colour245
 #set -g pane-active-border-fg colour39
@@ -22,7 +22,7 @@ set -g status-left-length 32
 set -g status-right-length 150
 set -g status-interval 5
 
-set -g status-left '#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]'
+set -g status-left '#[fg=colour245,bg=colour238,bold] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=colour238,bg=colour234,nobold]'
 set -g status-right '#[fg=colour238,bg=colour234,nobold]#[fg=colour245,bg=colour238] #h #[fg=colour252]#[fg=colour235,bg=colour252,bold]%H:%M'
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
 set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour25,bg=colour39,noreverse,bold] #I  #W #[fg=colour39,bg=colour234,nobold]"
