tmux current_pane_path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,11 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set -g default-terminal "xterm-256color"
 
 set -g default-command /bin/zsh
+
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Bad Wolf
 set -g status-fg colour245
 set -g status-bg colour234
